# ttrack

./: .editorconfig  .ghci  .gitignore  README.md  TimeTrackerDB.hs  TimeTrackerMain.hs  TimeTrackerTests.hs  TimeTrackerTypes.hs  TimeTrackerUtils.hs  build.ps1  clean.ps1  floskell.json  hs-time-tracker.sublime-workspace  hs-ttrack.cabal  package.yaml  printdb.ps1  stack.yaml  ttrack.cabal
TTrack/: Config.hs  DB.hs  Main.hs  TimeUtils.hs  Types.hs  Utils.hs
app/: Main.hs
lib/Data/List/: Extras.hs
lib/Data/Maybe/: Extras.hs
lib/TTrack/: CLI.hs  Commands.hs  Config.hs  DB.hs  DateParsing.hs  PrintTable.hs  Tests.hs  TimeUtils.hs  Types.hs  Utils.hs
src/TTrack/: CLI.hs  Commands.hs  DB.hs  DateParsing.hs  Tests.hs  TimeUtils.hs  Types.hs  Utils.hs
test/TTrack/: DateParsingSpec.hs  PrintTableSpec.hs  TimeUtilsSpec.hs
test/TTrack/IT/: ITSpec.hs
